WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
259112
REGRESSION(
265827@main
): Variable reference in matched declarations cache can not be overridden
https://bugs.webkit.org/show_bug.cgi?id=259112
Summary
REGRESSION(265827@main): Variable reference in matched declarations cache can...
Antti Koivisto
Reported
2023-07-11 10:00:15 PDT
A normal non-inherited value overriding a variable reference may not be applied correctly.
Attachments
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2023-07-11 10:00:29 PDT
rdar://111924949
Antti Koivisto
Comment 2
2023-07-11 10:16:49 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/15745
EWS
Comment 3
2023-07-11 22:29:37 PDT
Committed
265985@main
(58d11893af89): <
https://commits.webkit.org/265985@main
> Reviewed commits have been landed. Closing PR #15745 and removing active labels.
Karl Dubost
Comment 4
2023-08-07 21:46:14 PDT
***
Bug 259878
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug