Cherry-pick 58d11893af89. rdar://problem/111924949

REGRESSION(265827@main): Variable reference in matched declarations cache can not be overridden
    https://bugs.webkit.org/show_bug.cgi?id=259112
    rdar://111924949

    Reviewed by Myles C. Maxfield.

    A normal non-inherited value overriding a variable reference may not be applied correctly.

    * LayoutTests/fast/css/variables/variable-reference-override-cached-expected.html: Added.
    * LayoutTests/fast/css/variables/variable-reference-override-cached.html: Added.
    * Source/WebCore/style/PropertyCascade.cpp:
    (WebCore::Style::PropertyCascade::hasProperty):
    (WebCore::Style::PropertyCascade::addMatch):
    (WebCore::Style::PropertyCascade::shouldApplyAfterAnimation):

    The cached variable reference case needs the same already-applied check as the after-animation case.
    Move the check to addMatch.

    * Source/WebCore/style/PropertyCascade.h:

    Canonical link: https://commits.webkit.org/265985@main

Identifier: 265870.104@safari-7616-branch