Source/WebCore/style/PropertyCascade.cpp
@@ -155,6 +155,13 @@ void PropertyCascade::setDeferred(CSSPropertyID id, CSSValue& cssValue, const Ma
     setPropertyInternal(property, id, cssValue, matchedProperties, cascadeLevel);
 }
 
+bool PropertyCascade::hasProperty(CSSPropertyID propertyID, const CSSValue& value)
+{
+    if (propertyID == CSSPropertyCustom)
+        return hasCustomProperty(downcast<CSSCustomPropertyValue>(value).name());
+    return propertyID < firstDeferredProperty ? hasNormalProperty(propertyID) : hasDeferredProperty(propertyID);
+}
+
 const PropertyCascade::Property* PropertyCascade::lastDeferredPropertyResolvingRelated(CSSPropertyID propertyID, TextDirection direction, WritingMode writingMode) const
 {
     auto relatedID = [&] {
@@ -202,36 +209,42 @@ bool PropertyCascade::addMatch(const MatchedProperties& matchedProperties, Casca
         if (important != current.isImportant())
             continue;
 
+        auto propertyID = current.id();
+
         auto shouldIncludeProperty = [&] {
+#if ENABLE(VIDEO)
+            if (propertyAllowlist == PropertyAllowlist::Cue && !isValidCueStyleProperty(propertyID))
+                return false;
+#endif
+            if (propertyAllowlist == PropertyAllowlist::Marker && !isValidMarkerStyleProperty(propertyID))
+                return false;
+
             if (m_includedProperties.containsAll(allProperties()))
                 return true;
             if (m_includedProperties.contains(PropertyType::Inherited) && current.isInherited())
                 return true;
             if (m_includedProperties.contains(PropertyType::NonInherited) && !current.isInherited())
                 return true;
+
+            // If we have applied this property for some reason already we must apply anything that overrides it.
+            if (hasProperty(propertyID, *current.value()))
+                return true;
+
             if (m_includedProperties.contains(PropertyType::VariableReference)) {
                 if (current.value()->hasVariableReferences())
                     return true;
             }
             if (m_includedProperties.containsAny({ PropertyType::AfterAnimation, PropertyType::AfterTransition })) {
                 if (shouldApplyAfterAnimation(current)) {
-                    m_animationLayer->overriddenProperties.add(current.id());
+                    m_animationLayer->overriddenProperties.add(propertyID);
                     return true;
                 }
             }
+
             return false;
         }();
 
         if (!shouldIncludeProperty)
-            continue;
-
-        auto propertyID = current.id();
-
-#if ENABLE(VIDEO)
-        if (propertyAllowlist == PropertyAllowlist::Cue && !isValidCueStyleProperty(propertyID))
-            continue;
-#endif
-        if (propertyAllowlist == PropertyAllowlist::Marker && !isValidMarkerStyleProperty(propertyID))
             continue;
 
         if (propertyID < firstDeferredProperty)
@@ -249,15 +262,6 @@ bool PropertyCascade::shouldApplyAfterAnimation(const StyleProperties::PropertyR
 
     auto id = property.id();
     auto* customProperty = dynamicDowncast<CSSCustomPropertyValue>(*property.value());
-
-    auto hasPropertyAlready = [&] {
-        if (customProperty)
-            return hasCustomProperty(customProperty->name());
-        return id < firstDeferredProperty ? hasNormalProperty(id) : hasDeferredProperty(id);
-    }();
-
-    if (hasPropertyAlready)
-        return true;
 
     auto isAnimatedProperty = [&] {
         if (customProperty)
